--- a/Cheathseet-cpp/Cheathseet-cpp.cbp
+++ b/Cheathseet-cpp/Cheathseet-cpp.cbp
@@ -2,21 +2,25 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="funciones" />
+		<Option title="Cheathseet-cpp" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/funciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Cheathseet-cpp" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="../Include" />
 				</Compiler>
+				<Linker>
+					<Add library="../Libreria-cpp/bin/Debug/libLibreria-cpp.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/funciones" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Cheathseet-cpp" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
