--- a/Archivos/Archivos.cbp
+++ b/Archivos/Archivos.cbp
@@ -2,22 +2,22 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Fecha" />
+		<Option title="Archivos" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Fecha" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Archivos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="empleado.dat" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="../Include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Fecha" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Archivos" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,8 +31,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="../Include" />
 		</Compiler>
-		<Unit filename="Fecha.c">
+		<Unit filename="../Include/Archivos.h" />
+		<Unit filename="../Include/Fecha.h" />
+		<Unit filename="Archivos.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="main.c">
